--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,83 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.card {
+  width: 240px;
+  height: 307px;
+  top: 64px;
+  background: rgba(255, 255, 255, 0.83);
+  border: 0.3px solid rgba(0, 48, 46, 0.14);
+  border-radius: 5px;
+  margin-bottom: 3rem;
+}
+.card-image img {
+  width: 90px;
+  height: 90px;
+  border-radius: 400px;
+  margin-top: 49px;
+}
+.card-title {
+  font-weight: bold;
+  font-size: 14px;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 17px;
+  line-height: 33px;
+  color: #00302e;
+  text-align: center;
+  margin-top: 1rem;
+}
+.description {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 11px;
+  line-height: 21px;
+  text-align: center;
+  color: rgba(0, 0, 0, 0.69);
+  padding: 0px 40px;
+}
+
+.menu {
+  width: 80%;
+  text-align: center;
+  margin-left: 0%;
+  display: flex;
+}
+.menu .card {
+}
+.add-btn {
+  outline: none;
+  border: none;
+  background-color: white;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 13px;
+  line-height: 33px;
+  color: #06e775;
+}
+.price-add-btn {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 19px;
+  margin-top: 1.5rem;
+}
+.price-tag {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 13px;
+  line-height: 33px;
+  color: #00302e;
+}
+.cards{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-bottom: 4rem;
 }
