--- a/src/styles/Components/Menu.css
+++ b/src/styles/Components/Menu.css
@@ -2,7 +2,9 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    width: 97%;
+    padding: 0px 40px 0px 20px;
+    width: 100%;
+    margin-top: -0.5rem;
 }
 .menu-list1 {
   width: 240px;
