--- a/src/styles/Components/Modals/ModalCart.css
+++ b/src/styles/Components/Modals/ModalCart.css
@@ -10,7 +10,7 @@
 }
 
 .modal-content {
-  width: 760px;
+  width: 670px;
   background-color: #fff;
   height: 100vh;
 }
@@ -18,6 +18,9 @@
 .modal-header,
 .modal-footer {
   padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .modal-title {
@@ -25,7 +28,20 @@
 }
 
 .modal-body {
+  padding: 0px;
+  width: 670px;
+  
+}
+.close-button {
+  margin-left: -30px;
+  box-shadow:  3px 3px 8px #00302e;
+  width: 6%;
+}
+.button {
+  font-size: 20px;
+  margin-left: px;
   padding: 10px;
-  border-top: 1px solid #eee;
-  border-bottom: 1px solid #eee;
+  color: #00302e;
+  background-color: #fff;
+  border: none;
 }
