--- a/src/styles/pages/Dashboard.css
+++ b/src/styles/pages/Dashboard.css
@@ -1,7 +1,37 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
+/*.dashboard{
+display: grid;
+grid-template-areas: 
+"a b"
+;
+gap: 0px;
+width: 100%;
+margin: 0 auto;
+padding: 0px 0px;
+}
+
+.navigation {
+  background-color: #eb5020;
+  grid-area: a;
+  padding: 90px 5px;
+  width: 100%;
+  width: 100%;
+  height: 170vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  place-items: center;
+}
+
+.menu {
+  background-color: #ffa401;
+  grid-area: b;
+  padding: 90px 5px;
+  width: 100%;
+}*/
 .dashboard {
-  overflow-y: scroll;
+  width: 100%;
   background: #ffffff;
   display: flex;
 }
@@ -11,19 +41,19 @@
   height: 170vh;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
+  align-items: center;
+  place-items: center;
 }
 .logo-icon {
   display: flex;
-  width: 22.5%;
+  width: 100%;
   justify-content: center;
-  position: fixed;
   margin-top: 5.2rem;
+  position: fixed;
 }
 .logo-icon img {
-  width: 57.48px;
-  height: 67px;
+  width: 47.48px;
+  height: 60px;
 }
 .logo-icon h6 {
   font-family: "Poppins";
@@ -37,11 +67,9 @@
   margin-left: 1rem;
 }
 .column {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  position: fixed;
+  width: 20%;
   margin-top: 13rem;
+  position: fixed;
 }
 .row1 {
   display: flex;
@@ -59,7 +87,6 @@
 .row3 {
   display: flex;
   justify-content: space-between;
-  width: 22%;
   margin: 10px 0px;
   padding: 10px 0px;
 }
@@ -111,7 +138,7 @@
 .row4 {
   display: flex;
   justify-content: space-between;
-  width: 22.4%;
+  width: 100%;
   margin: 10px 0px;
   padding: 10px 0px;
 }
@@ -147,11 +174,12 @@
   margin: 2px 0px 0px 6px;
 }
 .menu {
+  flex: 50%;
   display: flex;
   flex-direction: column;
   padding: 0px;
   margin: 0 auto;
-  width: 80%;
+  width: 100%;
 }
 .menus {
   padding: 0px;
@@ -167,7 +195,7 @@
   font-size: 23px;
   line-height: 40px;
   color: #00302e;
-  margin: 105px 40px 0px;
+  margin: 105px 0px 0px 25px;
   display: flex;
 }
 .greeting {
@@ -180,7 +208,7 @@
   font-size: 14px;
   line-height: 33px;
   color: rgba(0, 0, 0, 0.69);
-  margin: 0px 0px;
+  margin: 0px 0px 0px 42px;
 }
 .girl-image {
   margin: 85px 40px 0px;
@@ -188,6 +216,13 @@
 .containers1 {
   display: flex;
   justify-content: space-between;
+  width: 100%;
+}
+.greeting-what {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .cart-btn{
   font-family: "Poppins";
@@ -203,7 +238,69 @@
 .food-menus {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
+
+  width: 100%;
 }
 .food-item {
   width: 900px;
+}
+
+@media (max-width: 656px) {
+  .dashboard {
+    width: 100%;
+    background: #ffffff;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .navigation {
+    width: 100%;
+    height: 30vh;
+    display: flex;
+    flex-direction: row;
+    align-items:unset;
+    place-items: unset ;
+    position: fixed;
+  }
+
+  .column {
+    width: 20%;
+    margin-top: 3rem;
+    position:unset;
+    display: flex;
+  }
+
+  .logo-icon {
+    display: flex;
+    width: 30%;
+    justify-content:flex-start;
+    margin-top: 2.2rem;
+    position:  absolute;
+  }
+
+  .menu {
+    flex: 50%;
+    display: flex;
+    flex-direction: column;
+    padding: 0px;
+    margin: 0 auto;
+    width: 100%;
+    margin-top: 12rem;
+  }
+}
+
+@media (max-width: 500px) {
+ .to-dashboard {
+  display: none;
+ } 
+
+ .cart-btn {
+  display: none;
+ }
+ .column {
+  display: flex;
+  width: 25%;
+  place-items: center;
+ }
 }
